[project]
name = "weather-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.47.1,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "folium (>=0.20.0,<0.21.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "streamlit-folium (>=0.25.1,<0.26.0)",
    "meteostat (>=1.7.4,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
